# water_detect

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/_lcd/: CMakeLists.txt  _lcd.c
components/_lcd/include/: _lcd.h
components/matrixKeyboard/: CMakeLists.txt  matrixKeyboard.cpp
components/matrixKeyboard/include/: matrixKeyboard.h
components/ui/: CMakeLists.txt
components/ui/custom/: custom.c  custom.h
main/: CMakeLists.txt  application.cc  application.h  buzzer.h  idf_component.yml  main.cc  main.cpp  ui.cc  ui.h
main/board_adc/: board_adc.cc  board_adc.h
main/board_lcd/: board_lcd.c
main/matrix_keyboard/: matrix_keyboard.cc  matrix_keyboard.h
main/ui/custom/: custom.h
